# regression-tester

./: .pre-commit-config.yaml  README.md  processed.parquet  pyproject.toml
src/regression_tester/: __init__.py  compare_dfs.py  regression_tester.py
tests/: test_regression_test_package.py
